--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 
-
-#log
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+ngrok.enabled=true
+ngrok.auth-token=2AByaqgtVVQoRQD76Eis5uejH9Z_4LDzwQH2Te2RN3zmyQaj3
+##log
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
 
 spring.main.allow-circular-references=true
