--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.parkingmanagementsystem</groupId>
 	<artifactId>parkingmanagementsystem</artifactId>
-	<version>0.0.1</version>
+	<version>1.0</version>
 	<name>demo</name>
 	<description>demo of parkingmanagementsystem project </description>
 	<properties>
@@ -41,7 +41,11 @@
 <!--			<groupId>org.keycloak</groupId>-->
 <!--			<artifactId>keycloak-spring-boot-starter</artifactId>-->
 <!--		</dependency>-->
-
+		<dependency>
+			<groupId>io.github.kilmajster</groupId>
+			<artifactId>ngrok-spring-boot-starter</artifactId>
+			<version>0.6.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
