--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 
-ngrok.enabled=true
-ngrok.auth-token=2AByaqgtVVQoRQD76Eis5uejH9Z_4LDzwQH2Te2RN3zmyQaj3
+#ngrok.enabled=true
+#ngrok.auth-token=2AByaqgtVVQoRQD76Eis5uejH9Z_4LDzwQH2Te2RN3zmyQaj3
 ##log
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
