--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#mysql conntectivity
+#----- MySQL Configuration ----#
 spring.datasource.username=${DATASOURCE_USERNAME}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.url=${DATASOURCE_URL}
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDiale
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.sql.init.mode=always
 spring.jpa.open-in-view=false
 
@@ -18,9 +18,19 @@ logging.level.org.hibernate.type=TRACE
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
+# SWAGGER API DOC SPEC
+springdoc.api-docs.path=/grootan-parking-system/api-docs
+springdoc.swagger-ui.tagsSorter=alpha
+
+#---- Keycloak configuration ----#
+#keycloak.realm = Parking-Lot
+#keycloak.auth-server-url = http://localhost:4500/auth
+#keycloak.resource = grootan-parking-lot
+#keycloak.credentials.secret = 64fd0270-4972-4a6b-a99a-f42c1b9d3ec8
+
 #---- Ngrok Config ----#
-ngrok.enabled=true
-ngrok.auth-token=2AByaqgtVVQoRQD76Eis5uejH9Z_4LDzwQH2Te2RN3zmyQaj3
+#ngrok.enabled=true
+#ngrok.auth-token=2AByaqgtVVQoRQD76Eis5uejH9Z_4LDzwQH2Te2RN3zmyQaj3
 
 #---- Temp ----#
 spring.main.allow-circular-references=true
