fix login validation and redirect time

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,36 @@
-#mysql conntectivity
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.datasource.url=${DATASOURCE_URL}
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto = update
+#----- MySQL Configuration ----#
+spring.datasource.username = ${DATASOURCE_USERNAME}
+spring.datasource.password = ${DATASOURCE_PASSWORD}
+spring.datasource.url = ${DATASOURCE_URL}
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57InnoDBDialect
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql = true
+spring.jpa.generate-ddl = true
+spring.jpa.hibernate.ddl-auto = update
+spring.sql.init.mode = always
+spring.jpa.open-in-view = false
 
+# log
+logging.level.org.hibernate.SQL = DEBUG
+logging.level.org.hibernate.type = TRACE
 
-#log
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+#---- Thymeleaf ----#
+spring.thymeleaf.suffix = .html
+spring.thymeleaf.cache = false
 
-spring.main.allow-circular-references=true
+# SWAGGER API DOC SPEC
+springdoc.api-docs.path = /grootan-parking-system/api-docs
+springdoc.swagger-ui.tagsSorter = alpha
+
+#---- Keycloak configuration ----#
+#keycloak.realm = Parking-Lot
+#keycloak.auth-server-url = http://localhost:4500/auth
+#keycloak.resource = grootan-parking-lot
+#keycloak.credentials.secret = 64fd0270-4972-4a6b-a99a-f42c1b9d3ec8
+
+#---- Ngrok Config ----#
+#ngrok.enabled = true
+#ngrok.auth-token = ${NGROK_TOKEN}
+
+#---- Temp ----#
+spring.main.allow-circular-references = true
