--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.jpa.hibernate.ddl-auto = update
 spring.sql.init.mode = always
 spring.jpa.open-in-view = false
 
+# Terminal Banner
+spring.banner.location = classpath:grootan_banner.txt
+
 # log
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = TRACE
@@ -18,7 +21,7 @@ logging.level.org.hibernate.type = TRACE
 spring.thymeleaf.suffix = .html
 spring.thymeleaf.cache = false
 
-# SWAGGER API DOC SPEC
+# Swagger API Doc Spec
 springdoc.api-docs.path = /grootan-parking-system/api-docs
 springdoc.swagger-ui.tagsSorter = alpha
 
