--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.open-in-view = false
 spring.banner.location = classpath:grootan_banner.txt
 
 # log
-logging.level.org.hibernate.SQL = DEBUG
-logging.level.org.hibernate.type = TRACE
+#logging.level.org.hibernate.SQL = DEBUG
+#logging.level.org.hibernate.type = TRACE
 
 #---- Thymeleaf ----#
 spring.thymeleaf.suffix = .html
@@ -26,10 +26,16 @@ springdoc.api-docs.path = /grootan-parking-system/api-docs
 springdoc.swagger-ui.tagsSorter = alpha
 
 #---- Keycloak configuration ----#
-#keycloak.realm = Parking-Lot
+
+#keycloak.realm = parking-lot
 #keycloak.auth-server-url = http://localhost:4500/auth
+## keycloak resource is the client ID
 #keycloak.resource = grootan-parking-lot
-#keycloak.credentials.secret = 64fd0270-4972-4a6b-a99a-f42c1b9d3ec8
+#keycloak.ssl-required = external
+#keycloak.use-resource-role-mappings = true
+#keycloak.public-client = true
+#keycloak.credentials.secret = feec6b64-9b12-49ce-a8ff-9a4565f73258
+#keycloak.principal-attribute = preferred_username
 
 #---- Ngrok Config ----#
 #ngrok.enabled = true
